# navigation

./: .gitignore  Navigation.ipynb  README.md  checkpoint.pth  main.py  pyproject.toml  requirements.txt  test.py  test_visual.py  train.py  train_visual.py
agents/: agent.py  dqn_agent.py  dueling_dqn_agent.py
memories/: replay_buffer.py
models/: dueling_q_cnn.py  dueling_q_net.py  q_cnn.py  q_net.py
report/: bibliography.bib  navigation.tex
utils/: config.py  image.py
