[tool.poetry]
name = "navigation"
version = "0.1.0"
description = ""
authors = ["Piero Macaluso <pieromacaluso8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.2"
torch = "^1.8.1"
torchvision = "^0.9.1"
torchaudio = "^0.8.1"
jupyter = "^1.0.0"
unityagents = "^0.4.0"
opencv-python = "^4.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
